[package]
name = "walrus-cdn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-stream = "0.3"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
once_cell = "1.19"
prometheus = "0.13"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rocksdb = { version = "0.22", default-features = false, features = ["lz4", "zstd", "snappy", "zlib"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
axum = "0.7"
ahash = "0.8"
plotters = "0.3"

# --- for sui integration ---
[dependencies.sui-sdk]
git = "https://github.com/mystenlabs/sui"
package = "sui-sdk"
optional = true

[features]
default = []
sui-live = ["sui-sdk"]
